# ultimateRAGBootcamp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/structured_files/: inventory.xlsx
0-DataIngestParsing/data/word_files/: proposal.elements
1-VectorEmbeddings/: embedding.ipynb  openaiembeddings.ipynb
